# Proteinspy

./: README.md
Final_proj_1/: 10AJ.cif  pyproject.toml
Final_proj_1/proteinspy/: __init__.py  __main__.py  analysis.py
