[tool.poetry]
name = "proteinspy"
version = "0.1.0"
description = "Protein structure analyser"
authors = ["Akhil <akhil@example.com>"]
packages = [{include = "proteinspy"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gemmi = ">=0.6.5"
rich = ">=13.0.0"
click = ">=8.1.0"

[tool.poetry.scripts]
proteinspy = "proteinspy.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
